Fix wrapping on author line.

--- a/src/components/PostThumbnail.module.css
+++ b/src/components/PostThumbnail.module.css
@@ -48,7 +48,7 @@
 
 .authorLine {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: flex-start;
   align-items: center;
   gap: 0.5em;
